--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <h2>Nhập tên của bạn:</h2>
-    <input type="text" id="username" placeholder="Nhập tên..." />
-    <button onclick="saveUsername()">Lưu tên</button>
+    <input type="text" id="test" placeholder="Nhập tên..." />
+    <button onclick="savetest()">Lưu tên</button>
 
     <script src="cookie.js"></script>
 </body>
